<resources>
    <string name="app_name">AndroidAuditEvent</string>
    <string name="add">Add</string>
    <string name="type">Type</string>
    <string name="subtype">Subtype</string>
    <string name="action">Action</string>
    <string name="period">Period</string>
    <string name="select_date">Select date</string>
    <string name="recorded">Recorded</string>
    <string name="outcome">Outcome</string>
    <string name="outcome_description">Outcome description</string>
    <string name="purpose_of_event">Purpose of event</string>
    <string name="agent">Agent</string>
    <string name="source">Source</string>
    <string name="entity">Entity</string>
</resources>